--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,7 @@ h1{
   width: 100%;
   color: #fff;
   padding: 10px 5px;
-  background: linear-gradient(45deg, rgba(21,82,153,1) 0%,rgba(144,192,229,.4) 100%);
+  background: linear-gradient(45deg, rgb(173, 83, 22) 0%,rgba(5, 4, 4, 0.4) 100%);
   transition: all .5s;
 }
 .singleBlog:hover .campContent{
@@ -164,7 +164,9 @@ h1{
   font-size: 60%;
   margin-top: 5px;
   font-weight: 600;
-  color: rgba(52, 73, 94,1.0)
+  font-weight: 300;
+  font-style: italic;
+  color: rgb(248, 248, 248)
 }
 
 .campContent a{
