--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@
 .hero-image {
   /* Use "linear-gradient" to make text more readable.*/
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../imgs/hero.jpg");
-  height: 400px;
+  height: 100vh;
  
 
   /* Position and center the image to scale nicely on all screens */
@@ -41,7 +41,7 @@
   background-size: cover;
   position: relative;
   margin-top: 0;
-  margin-bottom: 200px;
+  margin-bottom: 70px;
 }
 
 
@@ -61,7 +61,7 @@
 
 .heroContent h1{
   color: white;
-  font-size: 60px;
+  font-size: 50pt;
 }
 .heroContent p{
   font-size: 20px;
@@ -71,14 +71,24 @@
   font-size: 25px;
   font-weight: 400;
   padding: 7 12;
+  margin: 40px 0;
 }
 
-.container .btn {
+.container .btn , .btnViewAll {
   font-size: 20px;
   font-weight: 200;
   width: 17em;
   color: rgba(52, 73, 94,1.0);  
   border-color: rgba(52, 73, 94,1.0);
+}
+
+.btnViewAll {
+  display: inline-block;
+  margin: 70px auto 150px auto;
+  padding: 5px 10px;
+  border: 1px solid;
+  border-radius: 3px;
+  
 }
 
 body{
@@ -109,19 +119,44 @@ main{
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 30px;
-  margin: 30px 15px 0px 15px;
-  margin-top: 0; /* Add a top margin to avoid content overlay */
+  margin: 70px 15px 0px 15px;
+  /*margin-top: 0;  /* Add a top margin to avoid content overlay */
 }
 header{
   width: 70%;
   margin: 0 auto;
 }
-h1{
+
+
+
+h1, h2{
   margin: 0;
-  font-size: 50px;
+  font-size: 50pt;
   color: rgba(52, 73, 94,1.0);
   font-weight: 500;
 }
+
+h2 {
+  font-size: 39pt;
+  margin-bottom: 30px;
+}
+
+footer {
+  margin: 100px auto 0 auto;
+  bottom: 0;
+  margin: 0;
+  padding: 50px 0;
+  height: 100%;
+
+  background-color: #333;
+  
+}
+
+footer p {
+  color: #fff;
+}
+
+
 .singleBlog{
   position: relative;
   overflow: hidden;
@@ -180,7 +215,7 @@ h1{
   border-radius: 3px;
   font-weight: 400;
 }
-.btn:hover{
+.btn:hover , .btnViewAll:hover {
   background: rgba(52, 152, 219,1.0);
   transition: all .5s;
   text-decoration: none;
