--- a/css/style.css
+++ b/css/style.css
@@ -28,11 +28,15 @@
 }
 
 
+
 /* Home header/hero image */
 .hero-image {
   /* Use "linear-gradient" to make text more readable.*/
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../imgs/hero.jpg");
   height: 100vh;
+  width: 100%;
+  right: 200%;
+  left: 0%;
  
 
   /* Position and center the image to scale nicely on all screens */
@@ -41,8 +45,39 @@
   background-size: cover;
   position: relative;
   margin-top: 0;
-  margin-bottom: 70px;
+  margin-bottom: 70pt;
 }
+section{ 
+  margin-top: 0; 
+  margin-bottom: 17em;
+  width: 100%;
+}
+#home-info{
+  display: inline-block;
+  margin-bottom: 40em;
+  width: 70%;
+  height: 10em;
+  text-anchor: center;
+}
+#home-video {
+  max-width: 40em;
+  width: 45%;
+  height: 15em;
+ 
+  margin: 0;
+  float: left;
+}
+
+#home-video-info{
+  width: 30%;
+  text-align: left;
+  margin: 0;
+  margin-top: -1em;
+  padding-left: -150em;
+  float:  right;
+}
+
+
 
 
 
@@ -66,20 +101,12 @@
 .heroContent p{
   font-size: 20px;
   font-weight: 400;
+  margin: 40px 0;
 }
-.heroContent .btn {
+.container .btn , .btnViewAll {
   font-size: 25px;
   font-weight: 400;
   padding: 7 12;
-  margin: 40px 0;
-}
-
-.container .btn , .btnViewAll {
-  font-size: 20px;
-  font-weight: 200;
-  width: 17em;
-  color: rgba(52, 73, 94,1.0);  
-  border-color: rgba(52, 73, 94,1.0);
 }
 
 .btnViewAll {
@@ -91,10 +118,20 @@
   
 }
 
+.container .btn {
+  font-size: 20px;
+  font-weight: 200;
+  width: 17em;
+  color: rgba(52, 73, 94,1.0);  
+  border-color: rgba(52, 73, 94,1.0);
+}
+
 body{
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', sans-serif;
+  text-align: center;
+  margin: 70px 15px 0px 15px;
 }
 a{
   transition: all .5s;
@@ -106,41 +143,38 @@ img{
   width: 100%;
   transition: all .5s;
 }
-section{ 
-  margin-top: 0; 
-  text-align: center;
-}
+
 .container{
   max-width: 1200px;
   width: 100%;
+  padding-top: 45px;
   margin: 0 auto;
 }
 main{
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 30px;
-  margin: 70px 15px 0px 15px;
-  /*margin-top: 0;  /* Add a top margin to avoid content overlay */
+ 
+  max-width: 1080px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  width: 90%;
 }
 header{
   width: 70%;
   margin: 0 auto;
 }
-
-
-
 h1, h2{
   margin: 0;
   font-size: 50pt;
   color: rgba(52, 73, 94,1.0);
   font-weight: 500;
 }
-
 h2 {
   font-size: 39pt;
   margin-bottom: 30px;
 }
-
 footer {
   margin: 100px auto 0 auto;
   bottom: 0;
@@ -148,15 +182,8 @@ footer {
   padding: 50px 0;
   height: 100%;
 
-  background-color: #333;
-  
+  background-color: #333;  
 }
-
-footer p {
-  color: #fff;
-}
-
-
 .singleBlog{
   position: relative;
   overflow: hidden;
