--- a/css/style.css
+++ b/css/style.css
@@ -179,7 +179,7 @@ header{
   width: 70%;
   margin: 0 auto;
 }
-h1, h2{
+h1, h2, h3{
   margin: 0;
   font-size: 50pt;
   color: var(--sub-colour-dark);
@@ -189,11 +189,17 @@ h2 {
   font-size: 39pt;
   margin-bottom: 30px;
 }
+
+h3 {
+  font-size: 25pt;
+  margin-bottom: 25px;
+}
+
 footer {
   margin: 100px auto 0 auto;
   bottom: 0;
   margin: 0;
-  padding: 50px 0;
+  padding: 20px 0;
   height: 100%;
 
   color: var(--main-colour-light);
@@ -236,6 +242,7 @@ footer {
   font-size: 20px;
   font-weight: 500;
   margin: 0;
+  color:var(--main-colour-light);
 }
 .campContent h3 span{
   display: block;
@@ -272,6 +279,18 @@ footer {
   text-decoration: underline;
 }
 
+
+#fbFooter {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-left: 30px;
+  text-align: right;
+}
+
+#fbFooter p {
+  margin-right: 30px;
+}
 
 
 
