--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -97,6 +97,7 @@ footer {
   width: 100%;
   padding-top: 45px;
   margin: 0 auto;
+  min-height: 100vh;
 }
 
 
@@ -256,14 +257,13 @@ footer {
   margin-right: auto;
   text-align: center;
   width: 90%;
-  height:100vh;
+  height: auto;
 }
 
 .singleBlog{
   position: relative;
   overflow: hidden;
-  max-height: 50vh;
-  height: 100%;
+  height: 50vh;
   box-sizing: border-box;
   box-shadow: 3px 3px 10px var(--drop-shadow);
   margin: 10px;
@@ -276,6 +276,7 @@ footer {
   box-shadow: 3px 3px 13px var(--drop-shadow);
   transition: all .5s;
 }
+
 .singleBlog:hover img{
   transform: scale(1.1);
   transition: all .4s;
@@ -383,40 +384,53 @@ footer {
 }
 
 .staticGallery img {
-  transition: 1s;
   padding: 0;
   margin: 0;
-  width: 25vw;
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 10px;
+  
+}
+
+.staticGallery a {
+  border-radius: 10px;
+  overflow: hidden;
+  margin: 5px;
 }
 
 .staticGallery img:hover {
   filter: grayscale(30%);
+  border-radius: 10px;
   transform: scale(1.1);
 }
 
 .albumPreview, .albumThird {
   position: relative;
   height: 80%;
-  width: 90%;
+  width: 20%;
   margin: 0 5%;
   overflow: hidden;
   border-radius: 10px;
-  margin-bottom: -180px;
+  /* margin-bottom: -180px; */
   z-index: 1;
 }
 
 .headSecond, .headThird { 
   z-index: 2;
   border-radius: 10px;
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0,0,0,0.7);
   padding: 10px;
+  margin-left: -10px;
+
+  width: 70%;
 }
 
 .frameSample, .frameThird {
-  width: 100%;
+  width: 200%;
   position: absolute;
-  bottom: -140px;
-  left: -1px;
+  top: -20%;
+  left: 0;
 }
 
 .campThird {
@@ -428,6 +442,7 @@ footer {
 .albumThird {
   width: 100%;
   height: 100%;
+  max-height: 490px;
   margin: -50px 0px -300px -10px
 }
 
@@ -440,8 +455,13 @@ footer {
 
 .campThird:hover {
   background: var(--btn-hover-colour);
+  cursor: pointer;
   transition: all .5s;
 }
+
+
+
+
 
 
 
@@ -491,9 +511,11 @@ footer {
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 20px;
   }
+
+  
 }
 
-@media (max-width:767px) {
+@media (max-width:769px) {
   #blogContainer {
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 15px;
@@ -516,6 +538,16 @@ footer {
   }
 }
 
+@media (max-width:630px) {
+
+  .staticGallery img {
+    width: 100px;
+    height: 100px;
+  }
+
+ 
+}
+
 @media (max-width:500px) {
 
     #blogContainer {
@@ -523,11 +555,15 @@ footer {
     }
     
     .singleBlog {
-      max-height: 80vh;
+      height: 70vh;
     }
 
     #fbFooter p {
       text-align: left;
     }
+
+   
 }
+
+
 
