--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -247,7 +247,7 @@ footer {
 /*/////////////////////////////////////////////////////////////////////////////////////////////////*/
 /* Camp Blogs /////////////////////////////////////////////////////////////////////////////////////*/
 
-#blogContainer {
+.blogContainer {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 30px;
@@ -370,9 +370,6 @@ footer {
 
 /* Camp Gallery ///////////////////////////////////////////////////////////////////////////////////*/
 
-#campGallery {
-  display: none;
-}
 
 #gallery {
   width: 100%;
@@ -460,6 +457,10 @@ footer {
 }
 
 
+.individualGallery {
+  display: none;
+}
+
 
 
 
@@ -507,7 +508,7 @@ footer {
 /* Media Queries //////////////////////////////////////////////////////////////////////////////////*/
 
 @media (max-width:992px) {
-  #blogContainer {
+  .blogContainer {
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 20px;
   }
@@ -516,7 +517,7 @@ footer {
 }
 
 @media (max-width:769px) {
-  #blogContainer {
+  .blogContainer {
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 15px;
   }
@@ -550,7 +551,7 @@ footer {
 
 @media (max-width:500px) {
 
-    #blogContainer {
+    .blogContainer {
       grid-template-columns: repeat(1, 1fr);
     }
     
