Backend now dumps camp db tables onto home page for future merge with frontend

--- a/CodingOnCountry/Views/Home/Index.cshtml
+++ b/CodingOnCountry/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model IEnumerable<CodingOnCountry.Models.Camp>
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -6,3 +8,26 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+@foreach (var item in Model)
+{
+    <div>
+        @Html.DisplayFor(modelItem => item.Name)
+
+        @Html.DisplayFor(modelItem => item.Description)
+
+        @Html.DisplayFor(modelItem => item.CampCommunity)
+
+        @Html.DisplayFor(modelItem => item.CampAddress)
+
+        @Html.DisplayFor(modelItem => item.EmbededFacebookAlbumLink)
+
+        @Html.DisplayFor(modelItem => item.CampDate)
+
+        @Html.DisplayFor(modelItem => item.CampStartTime)
+
+        @Html.DisplayFor(modelItem => item.CampEndTime)
+    </div>
+    <p></p>
+    
+}
