Added admin return button and fixed dump formatting

--- a/CodingOnCountry/Views/Camps/Index.cshtml
+++ b/CodingOnCountry/Views/Camps/Index.cshtml
@@ -5,7 +5,12 @@
 }
 
 <h1>[Admin View] Camp List</h1>
-
+<!-- Temp return to homepage button. -->
+<br />
+<br />
+<button onclick="window.location.href = '/'">Return to Homepage</button>
+<br />
+<br />
 <p>
     <a asp-action="Create">Create New</a>
 </p>
@@ -40,38 +45,39 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CampCommunity)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CampAddress)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EmbededFacebookAlbumLink)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CampDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CampStartTime)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CampEndTime)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CampCommunity)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CampAddress)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.EmbededFacebookAlbumLink)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CampDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CampStartTime)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CampEndTime)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
