--- a/CodingOnCountry/Views/Home/Index.cshtml
+++ b/CodingOnCountry/Views/Home/Index.cshtml
@@ -1,13 +1,282 @@
 ﻿@model IEnumerable<CodingOnCountry.Models.Camp>
 
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Coding on Country";
 }
+<environment include="Development">
+    <link rel="stylesheet" href="~/css/style.css" />
+    <link rel="stylesheet" href="~/css/all.min.css" />
+    <link rel="stylesheet" href="~/css/modal.css" />
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    <script src="~/js/gallery.js"></script>
+    <script src="~/js/script.js"></script>
+</environment>
+
+
+
+<body>
+
+    <!--///////////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
+    <!-- HEADER SECTION ///////////////////////////////////////////////////////////////////////////////////////////////////-->
+    <!--///////////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
+    <!-- Navigation Bar ///////////////////////////////////////////////////////////////////////////////////////////////////-->
+
+    <div class="mobNav">
+        <a id="menu" onclick="openMenu()">menu</a>
+        <a id="close" onclick="closeMenu()">close</a>
+    </div>
+
+    <div class="navbar" id="mob">
+        <a href="#home" onclick="closeMenu()">Home</a>
+        <a href="#camps" onclick="closeMenu()">Camps</a>
+        <a href="#challenges" onclick="closeMenu()">Challenges</a>
+    </div>
+
+    <div class="navbar">
+        <a href="#home">Home</a>
+        <a href="#camps">Camps</a>
+        <a href="#challenges">Challenges</a>
+    </div>
+
+
+
+
+    <!-- Warning Bar //////////////////////////////////////////////////////////////////////////////////////////////////////-->
+
+    <div class="warning">
+        <p><b>Warning:</b> Aboriginal and Torres Strait Islander viewers are warned that this site may contain images and voices of deceased persons.</p>
+        <a class="warning_close"><i class="fas fa-times"></i></a>
+    </div>
+
+
+    <!--///////////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
+    <!-- HOME/HERO SECTION ////////////////////////////////////////////////////////////////////////////////////////////////-->
+    <!--///////////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
+    <!-- Home / Main //////////////////////////////////////////////////////////////////////////////////////////////////////-->
+
+    <div class="hero-image" id="home">
+        <div class="heroContent">
+            <h1>Coding on Country</h1>
+            <p>Bringing community, country and coding together.</p>
+            <a href="#home-info" class="btn">Read More</a>
+        </div>
+    </div>
+
+
+    <!-- Home - About Section /////////////////////////////////////////////////////////////////////////////////////////////-->
+
+    <div id="home-info">
+        <iframe id="home-video" src="https://www.youtube.com/embed/8ukWYBMH-zI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div id="home-video-info">
+            <h3>About</h3>
+            <p>RANDOM PLACEHOLDER Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas dolor alias reprehenderit, ad, voluptatibus praesentium laudantium architecto mollitia tempora minus nihil perferendis harum doloribus labore.</p>
+        </div>
+    </div>
+
+
+    <!--///////////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
+    <!-- CAMP GALLERY SECTION /////////////////////////////////////////////////////////////////////////////////////////////-->
+    <!--///////////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
+
+    <div class="container" id="camps">
+
+        <!-- Recent Camps /////////////////////////////////////////////////////////////////////////////////////////////////////-->
+        <div id="recentCamps">
+
+            <!-- Title Section ------------------------------------------------------------->
+
+            <header class="campHeader">
+                <h2 class="minorHeader">Past Camps</h2>
+                <h2>Recent Camps</h2>
+                <h2 class="minorHeader">Upcoming Camps</h2>
+            </header>
+
+
+            <!-- Blog List ----------------------------------------------------------------->
+
+            <div class="blogContainer" id="recentContainer">
+
+                <div class="singleBlog">
+
+                    <div class="campContent">
+
+                        <div class="blogHead">
+                            <h3> Camp Name </Camp> </h3> <!-- Insert Camp Name -->
+                            <h4> Location / Community </h4> <!-- Insert Location / Community -->
+                            <p class="blogDate">Jan 12, 2018 </p> <!-- Insert Date -->
+                        </div> <!-- /blogHead -->
+
+                        <p class="blogText">Sample Camp Description of what went on etc etc, blah blah blah</p> <!-- Insert Camp Description -->
+
+                        <a href="#camps" class="btn blogLink" onclick="selectGallery(); gallerySelect('gallery_001')"> View Gallery </a> <!-- Insert gallery ID (Replace 'gallery_001', must have single quotes) -->
+
+                    </div><!-- /campContent -->
+                </div> <!-- /singleBlog -->
+
+
+                <div class="singleBlog">
+                    <div class="campContent campThird">
+
+                        <div class="albumThird">
+                            <a href="~/img/Temp/cat1.jpg"> <img src="~/img/Temp/cat1_small.jpg"></a>
+                        </div> <!-- /albumThird -->
+
+                        <div class="blogHead headThird">
+                            <h3>Camp Name</h3>
+                            <h4>Wujal Wujal</h4>
+                            <p class="blogDate">Jan 12, <a href="#"></a>2018</a></p>
+                        </div> <!-- /blogHead -->
+
+                        <a href="#camps" class="linkThird" onclick="selectGallery(); gallerySelect('gallery_002')">View Gallery</a>
+
+                    </div> <!-- /campContent -->
+                </div> <!-- /singleBlog -->
+
+
+
+                <div class="singleBlog">
+
+                    <div class="campContent">
+
+                        <div class="blogHead">
+                            <h3> Camp Name </Camp> </h3> <!-- Insert Camp Name -->
+                            <h4> Location / Community </h4> <!-- Insert Location / Community -->
+                            <p class="blogDate">Jan 12, 2018 </p> <!-- Insert Date -->
+                        </div> <!-- /blogHead -->
+
+                        <p class="blogText">Sample Camp Description of what went on etc etc, blah blah blah</p> <!-- Insert Camp Description -->
+
+                        <a href="#camps" class="btn blogLink" onclick="selectGallery(); gallerySelect('gallery_003')"> View Gallery </a> <!-- Insert gallery ID (Replace 'gallery_001', must have single quotes) -->
+
+                    </div><!-- /campContent -->
+                </div> <!-- /singleBlog -->
+
+
+
+            </div><!-- /blogContainer -->
+            <!-- Galleries ----------------------------------------------------------------->
+            <!-- Local Galleries ----------------------------->
+            <div id="localGalleries">
+
+                <!-- Sample Gallery Item 1 -->
+                <div class="individualGallery" id="gallery_001">
+
+                    <a href="#camps" class="baseButton backButton" onclick="revertGallery(); galleryDeselect('gallery_001')">Back</a>
+
+
+                    <div class="galleryMain">
+                        <div class="campDetails">
+                            <h3>Dogs</h3>
+                            <p> Some Sample text. </p>
+                        </div> <!-- /campDetails -->
+
+                        <div class="staticGallery">
+                            <a href="~/img/Temp/dog1_small.jpg"> <img src="~/img/Temp/dog1_small.jpg"></a>
+                            <a href="~/img/Temp/dog2.jpg"> <img src="~/img/Temp/dog2_small.jpg"></a>
+                            <a href="~/img/Temp/dog1.jpg"> <img src="~/img/Temp/dog1_small.jpg"></a>
+                            <a href="~/img/Temp/dog1.jpg"> <img src="~/img/Temp/dog1_small.jpg"></a>
+                            <a href="~/img/Temp/dog2.jpg"> <img src="~/img/Temp/dog2_small.jpg"></a>
+                            <a href="~/img/Temp/dog1.jpg"> <img src="~/img/Temp/dog1_small.jpg"></a>
+                            <a href="~/img/Temp/dog2.jpg"> <img src="~/img/Temp/dog2_small.jpg"></a>
+                            <a href="~/img/Temp/dog1.jpg"> <img src="~/img/Temp/dog1_small.jpg"></a>
+                            <a href="~/img/Temp/dog2.jpg"> <img src="~/img/Temp/dog2_small.jpg"></a>
+                            <a href="~/img/Temp/dog1.jpg"> <img src="~/img/Temp/dog1_small.jpg"></a>
+                            <a href="~/img/Temp/dog2.jpg"> <img src="~/img/Temp/dog2_small.jpg"></a>
+                            <a href="~/img/Temp/dog1.jpg"> <img src="~/img/Temp/dog1_small.jpg"></a>
+                            <a href="~/img/Temp/dog1.jpg"> <img src="~/img/Temp/dog1_small.jpg"></a>
+                            <a href="~/img/Temp/dog2.jpg"> <img src="~/img/Temp/dog2_small.jpg"></a>
+                        </div> <!-- /staticGallery -->
+                    </div> <!-- /galleryMain -->
+
+                </div> <!-- /individualGallery -->
+                <!-- Sample Local Gallery Item 2 -->
+                <div class="individualGallery" id="gallery_002">
+                    <a href="#camps" class="baseButton backButton" onclick="revertGallery(); galleryDeselect('gallery_002')">Back</a>
+
+                    <div class="galleryMain">
+                        <div class="campDetails">
+                            <h3>Cats</h3>
+                            <p> Some Sample text. </p>
+                        </div><!-- /campDetails -->
+
+                        <div class="staticGallery">
+                            <a href="~/img/Temp/cat2.jpg"> <img src="~/img/Temp/cat2_small.jpg"></a>
+                            <a href="~/img/Temp/cat1.jpg"> <img src="~/img/Temp/cat1_small.jpg"></a>
+                            <a href="~/img/Temp/cat2.jpg"> <img src="~/img/Temp/cat2_small.jpg"></a>
+                            <a href="~/img/Temp/cat1.jpg"> <img src="~/img/Temp/cat1_small.jpg"></a>
+                        </div><!-- /staticGallery -->
+
+                    </div><!-- /individualGallery -->
+                </div>
+
+
+            </div> <!-- /localGalleries -->
+            <!-- External Galleries -------------------------->
+            <div id="linkedGalleries">
+                <div class="individualGallery" id="gallery_003">
+                    <a href="#camps" class="mobileBack" onclick="revertGallery(); galleryDeselect('gallery_003')"> &lt Back</a>
+                    <a href="#camps" class="baseButton backButton" onclick="revertGallery(); galleryDeselect('gallery_003')">Back</a>
+
+                    <div class="galleryMain fbGallery">
+                        <div class="campDetails">
+                            <h3>Facebook</h3>
+                            <p> Some Sample text. </p>
+                        </div><!-- /campDetails -->
+
+
+                        <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmedia%2Fset%2F%3Fset%3Da.117150296322529%26type%3D3&width=500" width="500" height="650" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" class="fbFrame"></iframe>
+
+
+                    </div>
+                </div><!-- /individualGallery -->
+
+            </div> <!-- /linkedGalleries -->
+
+
+
+
+
+
+
+        </div> <!-- /recentCamps -->
+
+
+
+
+
+        <div id="pastCamps">
+            <header class="campHeader">
+                <h2>Past Camps</h2>
+                <h2 class="minorHeader">Recent Camps</h2>
+                <h2 class="minorHeader">Upcoming Camps</h2>
+            </header>
+
+            <p>Section Not Yet Implemented</p>
+
+        </div>
+
+
+
+
+        <div id="upcomingCamps">
+
+            <header class="campHeader">
+                <h2 class="minorHeader">Past Camps</h2>
+                <h2 class="minorHeader">Recent Camps</h2>
+                <h2>Upcoming Camps</h2>
+            </header>
+
+            <p> Section Not Yet Implemented</p>
+
+        </div>
+
+    </div><!-- /camps -->
+</body>
+
+
+
+
+
 
 <!-- Temp camp edit page button. -->
 <br />
