--- a/CodingOnCountry/Views/_ViewStart.cshtml
+++ b/CodingOnCountry/Views/_ViewStart.cshtml
@@ -2,6 +2,6 @@
     ViewData["Title"] = "Coding on Country";
 }
 
-<h2>Shared across pages layout</h2>
+<!-- <h2>Shared across pages layout</h2>
 
-<p>Hello from our View Template!</p>
+<p>Hello from our View Template!</p> -->
